hello_embedded Tutorial:  Loads of additions.  It now demonstrates how to create a tab-based interface for embedded Gate One terminals. SSH Plugin:  Made some changes to ssh_connect.py to fix the problem where terminals would hang when using the autoConnectURL feature with a pre-set password.  Just had to remove the os.fork(). Bookmarks Plugin:  Fixed a bug where bookmarks.html imports were failing with newer versions of html5lib.  It should work with both the old (0.90) and new versions now. Playback Plugin:  Modified to take advantage of the new rowAdjust feature (see below) so that gateone.js does not have to have hard-coded logic to detect the presence of the Playback Plugin in order to make room for the playback controls. gateone.js:  Added GateOne.prefs.rowAdjust and GateOne.prefs.colAdjust.  These variables, if increased, will reduce the amount of rows/cols reported to the server by that much. gateone.js:  Lots of adjustments to the code that figure out how many rows/cols are available for the terminal to use.  Also, the code that moves the screen up slightly (via CSS transforms) to keep the scrollback buffer from bleeding through the top has returned. termio.py:  Made a minor change to the logic that detects when a process has died so as to avoid unimportant OSError exceptions from showing up in the logs.

--- a/gateone/tests/hello_embedded/static/style.css
+++ b/gateone/tests/hello_embedded/static/style.css
@@ -114,3 +114,62 @@ footer ul { }
 footer ul li { display: inline; margin-right: 50px; }
 footer ul li a { font-size: 24px; margin-left: 10px; }
 footer ul li img { vertical-align: bottom; position: relative; top: 2px; }
+
+/* The following '.tabs' stuff applies to the section of index.html that shows how to make a tabbed interface */
+.tabs{
+    height:30px;
+}
+
+.tabs > ul{
+    font-size: 1em;
+    list-style:none;
+}
+
+.tabs > ul > li{
+    margin:0 2px 0 0;
+    padding:7px 10px;
+    display:block;
+    float:left;
+    color:#FFF;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -moz-border-radius-topleft: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 0px;
+    -moz-border-radius-bottomleft: 0px;
+    border-top-left-radius:4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    background: #C9C9C9; /* old browsers */
+    background: -moz-linear-gradient(top, #0C91EC 0%, #257AB6 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0C91EC), color-stop(100%,#257AB6)); /* webkit */
+    background: -ms-linear-gradient(top, #0C91EC 0%, #257AB6 100%);
+    background: -o-linear-gradient(top, #0C91EC 0%, #257AB6 100%);
+    background: linear-gradient(top, #0C91EC 0%, #257AB6 100%); /* Future */
+}
+
+.tabs > ul > li:hover{
+    background: #FFFFFF; /* old browsers */
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(10%,#F3F3F3), color-stop(50%,#F3F3F3), color-stop(100%,#FFFFFF)); /* webkit */
+    background: -ms-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    background: -o-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    background: linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    cursor:pointer;
+    color: #333;
+}
+
+.tabs > ul > li.tabActiveHeader{
+    background: #FFFFFF; /* old browsers */
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(10%,#F3F3F3), color-stop(50%,#F3F3F3), color-stop(100%,#FFFFFF)); /* webkit */
+    background: -ms-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    background: -o-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    background: linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%);
+    cursor:pointer;
+    color: #333;
+}
